# Persistent-Agent-Memory

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.claude/: settings.json
.claude/agent-memory/researcher/: MEMORY.md  project_rkp_context.md
.claude/agents/: researcher.md  reviewer.md  verifier.md
.claude/hooks/: auto-format.sh  block-dangerous-commands.sh
.claude/plans/: plan.md  prd.md
.claude/research/: fastmcp-api.md  landscape-2026.md  tree-sitter-api.md  typer-api.md
.claude/rules/: conventions.md  immutable.md  stack.md
.claude/skills/complete/: SKILL.md
.claude/skills/milestone/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
.plans/: 2026-03-19-demo-polish.md
.rkp/: config.yaml
changelog.d/: initial-release.feature  template.md
docs/: SYSTEM.md  architecture.md  claim-model.md  codex-5.3-research.md  codex-5.4-research.md  contributing.md  decisions.md  demo.md  development.md  distribution.md  host-adapters.md  index.md  prd.md  product-overview.md  quality-harness.md  research-build.md  research-implementation.md  research-product.md  research.md  security.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli.md  configuration.md  mcp-tools.md
src/rkp/: __init__.py  __main__.py
src/rkp/cli/: app.py
src/rkp/cli/commands/: apply.py  audit.py  doctor.py  import_.py  init.py  preview.py  purge.py  quality.py  refresh.py  review.py  (+2 more)
src/rkp/core/: claim_builder.py  config.py  errors.py  freshness.py  ids.py  logging.py  models.py  security.py  types.py
src/rkp/git/: backend.py  cli_backend.py
src/rkp/graph/: repo_graph.py
src/rkp/importer/: __init__.py  engine.py  models.py
src/rkp/indexer/: orchestrator.py
src/rkp/projection/: budget.py  capability_matrix.py  engine.py  sensitivity.py
src/rkp/quality/: __init__.py  __main__.py  benchmark.py  conformance.py  fixtures.py  harness.py  leakage.py  promotion.py  types.py
src/rkp/server/: mcp.py  resources.py  response.py  response_filter.py  tools.py  trace.py
src/rkp/store/: artifacts.py  claims.py  database.py  evidence.py  history.py  metadata.py  overrides.py
tests/: conftest.py
tests/fixtures/simple_js/: expected_claims.json  package.json
tests/fixtures/simple_python/: README.md  expected_claims.json  pyproject.toml
tests/fixtures/simple_python/src/myapp/: core.py  utils.py
tests/fixtures/simple_python/src/myapp/models/: user.py
tests/fixtures/simple_python/src/myapp/services/: auth.py
tests/fixtures/simple_python/tests/: test_core.py  test_models.py  test_utils.py
tests/fixtures/with_agents_md/: AGENTS.md  CLAUDE.md  pyproject.toml
tests/fixtures/with_ci/: Dockerfile  Makefile  docker-compose.yml  expected_claims.json  package.json  pyproject.toml
tests/fixtures/with_conflicts/: README.md  expected_claims.json  package.json  pyproject.toml
tests/fixtures/with_drift/: AGENTS.md  CLAUDE.md  drift_setup.json  expected_claims.json
tests/integration/: cli_helpers.py  test_allowlist_enforcement.py  test_cli.py  test_cli_apply.py  test_cli_audit.py  test_cli_copilot.py  test_cli_doctor.py  test_cli_import.py  test_cli_init.py  test_cli_m15.py  test_cli_m6.py  test_cli_purge.py  test_cli_refresh.py  test_cli_review.py  test_cli_serve.py  test_cli_status.py  test_cli_status_drift.py  test_cli_status_freshness.py  test_cursor_roundtrip.py  test_data_boundary.py  test_import_engine.py  test_mcp_claim.py  test_mcp_contract.py  test_mcp_copilot.py  test_mcp_detail_levels.py  test_mcp_envelope.py  test_mcp_freshness.py  test_mcp_m15.py  test_mcp_m5.py  test_mcp_m6.py  test_mcp_overview.py  test_mcp_pagination.py  test_mcp_preflight.py  test_mcp_prerequisites.py  test_mcp_refresh.py  test_mcp_resources.py  test_orchestrator.py  test_orchestrator_m4.py  test_orchestrator_m5.py  test_orchestrator_m6.py  (+7 more)
tests/property/: test_claims_property.py
tests/snapshot/: test_claude_projection.py  test_copilot_projection.py  test_projection.py  test_scoped_projection.py
tests/unit/: test_artifact_ownership.py  test_boundaries.py  test_budget.py  test_ci_evidence.py  test_claim_builder.py  test_claude_adapter.py  test_claude_budget.py  test_commands_extractor.py  test_config.py  test_config_parsers.py  test_config_parsers_m4.py  test_conflicts.py  test_conventions_extractor.py  test_copilot_adapter.py  test_copilot_guardrails.py  test_copilot_setup_steps.py  test_copilot_tool_allowlist.py  test_copilot_validation.py  test_cursor_adapter.py  test_database.py  test_docs_evidence.py  test_drift_detection.py  test_freshness.py  test_freshness_audit.py  test_git_backend.py  test_guardrails.py  test_ids.py  test_index_metadata.py  test_injection_detection.py  test_javascript_parser.py  test_logging.py  test_migration_0002.py  test_models.py  test_overrides.py  test_prerequisites.py  test_projection_review_state.py  test_python_parser.py  test_quality_harness.py  test_repo_graph.py  test_response_filter.py  (+13 more)
tests/unit/test_import_parsers/: test_agents_md_parser.py  test_claude_md_parser.py  test_copilot_parser.py  test_cursor_parser.py
(+45 files in other folders)
