[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-knowledge-plane"
version = "0.1.0"
description = "Extract once, govern centrally, project everywhere for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Sean Flanagan" }]
keywords = [
    "ai",
    "coding-agents",
    "mcp",
    "developer-tools",
    "repo-intelligence",
    "governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "structlog>=25.0.0",
    "pyyaml>=6.0.0",
    "strictyaml>=1.7.0",
    "typer>=0.15.0,<1.0.0",
    "rich>=13.0.0",
    "fastmcp>=3.1.0,<4.0.0",
    "tree-sitter>=0.25.0,<1.0.0",
    "tree-sitter-language-pack>=0.13.0",
    "dockerfile-parse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.0.0",
    "syrupy>=4.0.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.0.0",
    "nox>=2024.0.0",
    "mkdocs-material>=9.0.0",
    "towncrier>=24.0.0",
]

[project.scripts]
rkp = "rkp.cli.app:main"

[project.urls]
Homepage = "https://github.com/seanflanagan/repo-knowledge-plane"
Documentation = "https://seanflanagan.github.io/repo-knowledge-plane/"
Repository = "https://github.com/seanflanagan/repo-knowledge-plane"
Issues = "https://github.com/seanflanagan/repo-knowledge-plane/issues"
Changelog = "https://github.com/seanflanagan/repo-knowledge-plane/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rkp"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "N", "C4", "PTH", "PERF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["rkp"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".*", "*.egg", "*.egg-info", "build", "dist", "site", "tests/fixtures"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.towncrier]
package = "rkp"
package_dir = "src"
directory = "changelog.d"
filename = "CHANGELOG.md"
template = "changelog.d/template.md"
title_format = "## [{version}] - {project_date}"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true
