[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-python-project"
version = "1.0.0"
requires-python = ">=3.12"

[project.scripts]
myapp = "myapp.main:run"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
